# disty

./: .gitignore  Dockerfile  LICENSE  README.md  config.env  development.env  entrypoint.sh  manage.py  production.env  pyproject.toml  pytest.ini  seed.py
disty/: admin.py  apps.py  forms.py  models.py  settings.py  test_models.py  test_views.py  tests.py  urls.py  views.py
disty/migrations/: 0001_initial.py  0002_auto_20200610_2015.py  0002_user.py  0003_auto_20200610_2028.py  0003_file_url.py  0004_access.py  0004_uploadurl.py  0005_access_source_ip.py  0005_uploadurl_description.py  0006_access_timestamp.py  0006_auto_20200613_1815.py  0007_auto_20200615_2106.py  0007_document.py  0008_auto_20200607_1143.py  0009_auto_20200607_1149.py  0010_auto_20200607_1237.py
disty/templates/: base.html
disty/templates/disty/: access.html  files_by_user.html  files_for_user.html  home.html  links_by_user.html  model_form_upload.html  navigation.html  new_url.html  simple_upload.html
disty/templates/registration/: login.html
disty_online/: asgi.py  settings.py  urls.py  wsgi.py
