[tool.poetry]
name = "disty"
version = "0.0.1"
description = "A file sharing solution"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pylint = "^2.5.2"
pytest-django = "^3.9.0"
black = "^19.10b0"
pytest-freezegun = "^0.4.1"
pytest-coverage = "^0.0"
pytest-sugar = "^0.9.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
